<resources>
    <string name="app_name">Yuva Jay Ho</string>
    <string name="about_mp">About MP</string>
    <string name="about_mla_s">About MLA \'s</string>
    <string name="feedback">Feedback</string>
    <string name="exit">Exit</string>
    <string name="cmd">CM Dashboard</string>
    <string name="cod">Completed Schemes</string>
    <string name="guntur_parliamentary_constituency">Guntur Parliamentry Constituency</string>
    <string name="title_activity_about_mp">AboutMp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="navbar1"></string>
    <string name="about_guntur_mp">Guntur M.P Profile</string>
    <string name="profile">Profile</string>
    <string name="schedules">Schedule</string>
    <string name="title_activity_manglagiri_events">ManglagiriEvents</string>
    <string name="todo">TODO</string>
    <string name="name">name *</string>
    <string name="submit">submit</string>
    <string name="guntur_mp_profile">Guntur MP Profile</string>
    <string name="galla_jayadev">Galla Jayadev</string>
    <string name="speeches_in_parliament">Speeches in Parliament</string>
    <string name="activities_events">activities /events</string>
    <string name="activities_events_photos_and_videos">Activities / Events (Photos and Videos)</string>
    <string name="name1">Name</string>
    <string name="tadikonda_mla_profile">Tadikonda M.L.A Profile</string>
    <string name="speeches_in_parliament2">speeches in parliament</string>
    <string name="activities_events1">activities /events</string>
    <string name="home1">home</string>
    <string name="mangalagiri_m_l_a_profile">Mangalagiri M.L.A Profile</string>
    <string name="bapatla_m_l_a_profile">Bapatla M.L.A Profile</string>
    <string name="guntur_east_m_l_a_profile">Guntur East M.L.A Profile</string>
    <string name="feedback1">Feedback</string>
    <string name="feedback_on_m_p">Feedback on M.P</string>
    <string name="feedback_on_m_p1">Feedback on M.P</string>
    <string name="submit1">Submit</string>
    <string name="feedback_on_m_l_a">Feedback on M.L.A</string>
    <string name="about_guntur_m_l_a_s">About Guntur M.L.A\'s</string>
    <string name="speeches_in_parliament3">Speeches in Parliament</string>
    <string name="schedules1">Schedules</string>
    <string name="profile3">Profile</string>
    <string name="speeches_in_parliament4">Speeches in Parliament</string>
    <string name="activities_events2">Activities /events</string>
    <string name="home2">Home</string>

</resources>
