<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Yellow"
    tools:context=".AboutMp">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="116dp"
        android:text="@string/about_guntur_mp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/Black"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="91dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="221dp"
        android:layout_marginEnd="276dp"
        android:layout_marginRight="276dp"
        android:text="@string/profile"
        android:textColor="@color/Blue"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="231dp"
        android:layout_height="36dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="47dp"
        android:layout_marginLeft="47dp"
        android:layout_marginEnd="133dp"
        android:layout_marginRight="133dp"
        android:text="@string/speeches_in_parliament"
        android:textColor="@color/Blue"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="47dp"
        android:layout_marginLeft="47dp"
        android:layout_marginEnd="270dp"
        android:layout_marginRight="270dp"
        android:layout_marginBottom="244dp"
        android:text="@string/schedules"
        android:textColor="@color/Blue"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="47dp"
        android:layout_marginLeft="47dp"
        android:layout_marginEnd="34dp"
        android:layout_marginRight="34dp"
        android:layout_marginBottom="147dp"
        android:text="@string/activities_events_photos_and_videos"
        android:textColor="@color/Blue"
        android:textSize="18sp"
        android:textStyle="bold" />


</RelativeLayout>